--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/images/Logo_Thin_500x100.svg" />
+    <link rel="icon" href="%PUBLIC_URL%/images/Logo_Plane.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#FEF5ED" />
     <meta
       name="Rare Form Roasting Co."
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/Logo_Thin_500x100.svg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/Logo_Plane.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
